@@ -1,5 +1,9 @@
 2005-09-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/animationplay.c: moved toolbar out of main vbox.
+
+2005-09-19  Sven Neumann  <sven@gimp.org>
+
 	* autogen.sh
 	* configure.in
 	* app/main.c
